# moneybot-public

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
config/: base.yml  ci.deploy.yml  ci.test.yml
docs/: architecture.md  backend_api_reference.md  conda_deployment.md  deployment_guide.md  developer_guide.md  testing_and_coverage.md  webapp_guide.md
scripts/: export_frontend_env.py
src/config/: loader.py
src/data_pipeline/: constants.py  data_collector.py  data_fetcher.py  llm_provider.py  prediction_model.py
src/langgraph_workflow/: app.py  custom_types.py  rag_manager.py  utils.py
src/webapp/: eslint.config.js  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.json
src/webapp/src/: App.tsx  index.css
src/webapp/src/components/: AnalysisHistory.tsx  AnalysisRunner.tsx  CriteriaForm.tsx  PortfolioSelector.tsx  ResultsDashboard.tsx  WatchlistEditor.tsx
src/webapp/src/constants/: options.ts
src/webapp/src/hooks/: useAnalysisSession.ts
src/webapp/src/lib/: apiClient.ts
src/webapp/src/types/: api.ts  portfolio.ts  validation.ts
tests/: conftest.py
tests/e2e/: test_analysis_flow.py
tests/integration/: test_api_routes.py  test_http_utils.py
tests/unit/: test_app_business_logic.py  test_data_collector.py  test_data_fetcher.py  test_data_pipeline_constants.py  test_runtime_config.py  test_select_prediction_horizons.py  test_utils_grouping.py
